<resources>
    <string name="app_name">MainApp</string>
    <string name="enter_pass">Введите пароль</string>
    <string name="welcome">Добро пожаловать!</string>
    <string name="author">Семёнкина В. МО 4 курс</string>
    <string name="registration">Регистрация</string>
    <string name="phone_number">По номеру</string>
    <string name="email">По email</string>
    <string name="enter_email">Введите email</string>
    <string name="attention_cipa">Вас навестил опасный цып</string>
    <string name="entry_text">Скорее войдите</string>
    <string name="name">Введите имя</string>
    <string name="password">Введите пароль</string>
    <string name="entry">Войти</string>
    <string name="enter_phone">Введите номер телефона</string>
    <string name="repeat_password">Повторите пароль</string>
    <string name="register">Зарегистрироваться</string>
    <string name="Hello">С возвращением!</string>
    <string name="number_email">Введите номер или адрес почты</string>
    <string name="save_login">Не выходить из системы</string>
</resources>