<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/click"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#BFFBEF">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:textColor="#000000"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.2" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/author"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:text="@string/registration"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:layout_constraintVertical_bias="0.1" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginEnd="64dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        app:layout_constraintVertical_bias="0.4">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/number_textview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:clickable="true"
                android:gravity="center"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:text="@string/phone_number"
                android:textColor="#602077"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/email_textview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:clickable="true"
                android:gravity="center"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:text="@string/email"
                android:textColor="#9980A8" />
        </LinearLayout>

        <EditText
            android:id="@+id/editTextPhoneNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_phone"
            android:inputType="phone"
            android:textColor="#000000"
            android:textColorHint="#B295CD" />

        <EditText
            android:id="@+id/editTextEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_email"
            android:inputType="textEmailAddress"
            android:textColor="#000000"
            android:textColorHint="#B295CD"/>

        <EditText
            android:id="@+id/editTextPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_pass"
            android:inputType="textPassword"
            android:textColor="#000000"
            android:textColorHint="#B295CD"/>

        <EditText
            android:id="@+id/editTextRepeatPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/repeat_password"
            android:inputType="textPassword"
            android:textColor="#000000"
            android:textColorHint="#B295CD" />

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="98dp"
            android:text="@string/register"
            android:textAlignment="center"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.7" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>