<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login_button"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:background="#BFFBEF">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="260dp"
        android:layout_height="250dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.129"
        android:src="@drawable/cipa" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.2">

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/Hello"
            android:textColor="#000000"
            android:textSize="30sp" />

        <EditText
            android:id="@+id/LoginPhoneNumber_Email"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:hint="@string/number_email"
            android:textColor="#000000"
            android:textColorHint="#B295CD" />

        <EditText
            android:id="@+id/Login_Password"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColor="#000000"
            android:textColorHint="#B295CD" />

        <CheckBox
            android:id="@+id/save_login_check"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/save_login" />

        <Button
            android:id="@+id/Login_button"
            android:layout_width="match_parent"
            android:layout_height="85dp"
            android:textSize="35sp"
            android:text="@string/entry" />

        <Button
            android:id="@+id/Login_reg"
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:layout_gravity="center"
            android:text="@string/register" />


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>